--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,22 @@
   color: #61dafb;
 }
 
+.course-listings-table {
+  text-align: left;
+  border-spacing: 10px;
+}
+
+.course-number-button {
+     background:none!important;
+     color:inherit;
+     border:none;
+     padding:0!important;
+     font: inherit;
+     /*border is optional*/
+     border-bottom:1px solid #444;
+     cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
