--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,43 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  color: #fff;
+  background-color: #103D5D;
+  padding: 33px 15px 25px 15px;
+  min-height: 50px;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.header-link {
+  color: #c6cbce;
+  text-decoration: none;
+  font-size: 25px;
+  font-weight: 600;
+  letter-spacing: 0.3px;
+}
+
+button {
+  border-radius: 2px;
+  min-width: 88px;
+  background-color: #FA6900;
+  cursor: pointer;
+  border: 0;
+  min-width: 120px;
+  color: #fff;
+  font-size: 14px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  padding: 10px 6px;
 }
 
 .course-listings-table {
@@ -32,17 +50,15 @@
      color:inherit;
      border:none;
      padding:0!important;
+     box-shadow: none;
      font: inherit;
      /*border is optional*/
-     border-bottom:1px solid #444;
+     text-decoration: underline;
      cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divider{
+    width:25px;
+    height:auto;
+    display:inline-block;
 }
