--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   font-size: calc(10px + 2vmin);
 }
 
+body {
+  background-color: #f2f2e8;
+}
+
 .left {
   float: left;
 }
@@ -64,6 +68,33 @@ button {
     display:inline-block;
 }
 
+form button {
+  width: 100%;
+  margin-top: 10px;
+}
+
+input {
+  font-size: 22px;
+  color: #000;
+  padding: 18px 22px;
+  font-size: 16px;
+  margin-bottom: 17px;
+  border: 0;
+  display: block;
+  width: 75%;
+}
+
+.username {
+  display: inline;
+  font-size: 15px;
+}
+
 .main-content {
   padding: 15px 15px 15px 15px;
+
+}
+
+.ReactModal__Overlay {
+    width: 500px;
+    height: 450px;
 }
