--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 
 .App-header {
   color: #fff;
-  background-color: #103D5D;
+  background-color: #4d4d52;
   padding: 33px 15px 25px 15px;
-  min-height: 50px;
+  min-height: 40px;
   font-size: calc(10px + 2vmin);
 }
 
@@ -71,6 +71,17 @@ button {
 form button {
   width: 100%;
   margin-top: 10px;
+}
+
+H1 {
+  margin-top: 0;
+  padding: 15px;
+}
+
+.Home {
+  background-image: url('blended-learning-hero.jpg');
+
+  height: 800px;
 }
 
 input {
