--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,16 @@ input {
 
 }
 
+.classDetailsDialog {
+  flex-direction: column;
+  display: flex;
+}
+
+.btn-holder {
+  justify-content: flex-end;
+  display: flex;
+}
+
 .ReactModal__Overlay {
     width: 500px;
     height: 450px;
