--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,21 @@ input {
 .topic-selector {
   padding-bottom: 50px;
 }
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 70px;
+  padding: 50px;
+}
+
+li {
+  width: 40%;
+  list-style-type: none;
+  margin-right: 40px;
+  padding: 20px;
+  background-color: rgb(237, 237, 237);
+  color: #000;
+  margin-bottom: 40px;
+  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
+}
